Fix cache loading issue and design on tablet devices

--- a/src/app/private/deliveries/new-delivery/merchandise/merchandise.page.scss
+++ b/src/app/private/deliveries/new-delivery/merchandise/merchandise.page.scss
@@ -8,7 +8,6 @@ ion-card {
   font-weight: 500;
   text-align: center;
   padding: 10px;
-  height: 150px;
   position: relative;
   flex: 1;
 }
